# todoist-n8n-mcp

./: README.md  pyproject.toml  server.py
.claude/: learning.md  permutations.hs  permutations.py
.claude/skills/sensei-halp/: SKILL.md
.claude/skills/todoist/: SKILL.md
sensei-shine/: README-SENSEI-HALP.md  pdf-editor-approach.md  pdf-editor-domain.md  pdf-editor-iteration.md  pdf-editor-questions.md  pdf-editor-roadmap.md
